--- a/blog.html
+++ b/blog.html
@@ -17,15 +17,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/7.MnuuGMRX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.F2C24lKN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.t4CT8Gca.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.-kZd5kB3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0gH3K6yd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.B_1erFai.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Rs2KR4IV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.pWa7UHIc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.TjX85taC.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Y30OnaFq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.FsHACeq7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.CFf-lTkw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.3pakPRuO.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.I43auBKL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.6w4Ej4nR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.rEx3vLA9.js">
 	</head>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1s6vomy = {
+					__sveltekit_aehdzm = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.F2C24lKN.js"),
-						import("./_app/immutable/entry/app.Rs2KR4IV.js")
+						import("./_app/immutable/entry/start.-kZd5kB3.js"),
+						import("./_app/immutable/entry/app.pWa7UHIc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 7],
