--- a/projects.html
+++ b/projects.html
@@ -16,24 +16,24 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.LDgMhLWO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.l7A6fbuG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.B_1erFai.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5ZI1WtYL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.TjX85taC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Y30OnaFq.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.1Xhj4-r1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.CFf-lTkw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/12.BfCZp-_8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.6w4Ej4nR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.rEx3vLA9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsdUSdX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.CC5zFqvN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dno2o2_x.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/12.DsYk1IFB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class="is-active"><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns is-centered"><div class="column is-4"><h5 class="title is-5" data-svelte-h="svelte-1vh2v85">Personal Projects</h5> <a class="box" href="https://github.com/tdooms/pixelguesser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">PixelGuesser</h4> <h6>2022</h6></div></div> <p>PixelGuesser is a party game where players have to guess the contents of a heavily pixelated image which slowly grows more detailed over time. </p></a><a class="box" href="https://github.com/tdooms/paw" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">Paw</h4> <h6>2021</h6></div></div> <p>Easy to use ray marching renderer using JSON for scene description. Many primitives, composables and textures are supported.</p></a><a class="box" href="https://github.com/tdooms/ini-parser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">C++ ini parser</h4> <h6>2019</h6></div></div> <p>A Pythonic ini parser written in c++ using template hacking. The main goals are speed and ease of use. The ini file is read using a performant custom parser.</p></a></div> <div class="column is-4"><h5 class="title is-5" data-svelte-h="svelte-28navq">Academic Projects</h5> <a class="box" href="https://github.com/tdooms/meme.ir" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">meme.ir</h4> <h6>2022</h6></div></div> <p>A group project in which we finetuned a transformer model to predict a meme template given only the text. We achieved 70% top-1 accuracy on 100 templates.</p></a><a class="box" href="https://github.com/GNMX-UA/GNMX" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">GNMX</h4> <h6>2021</h6></div></div> <p>An interdisciplinary group project about computational biology. We developed a simulation and visualisation to investigate the genetic polymorphism phenomenon.</p></a><a class="box" href="https://github.com/tdooms/o4-compiler" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">O4 Compiler</h4> <h6>2020</h6></div></div> <p>A fully fledged C to MIPS compiler using antlr4 and LLVM. There are several optimisation techniques which make the output quite optimised.</p></a></div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_224da4 = {
+					__sveltekit_y3iv9a = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -42,8 +42,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.LDgMhLWO.js"),
-						import("./_app/immutable/entry/app.5ZI1WtYL.js")
+						import("./_app/immutable/entry/start.BbsdUSdX.js"),
+						import("./_app/immutable/entry/app.DIY3feRL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3, 12],
