--- a/research/trifecta.html
+++ b/research/trifecta.html
@@ -22,14 +22,14 @@
 		<link rel="modulepreload" href="../_app/immutable/entry/app.DIY3feRL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ozEcCyBp.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.3ka2Eg8E.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.Cc3rAu2H.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.CGWwVMFX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/navbar.Dno2o2_x.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/11.rKnCJW-r.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/16.BFwm6sqM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.CgU5AtxT.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/blog.DeizYLqS.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class="is-active"><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="content has-text-justified" style="margin: 0 auto;max-width: 880px;"> <div class="columns mb-0"><div class="column has-text-left"><h2 class="title is-2 mb-0">Mechanistic Interpretability Techniques</h2></div> <div class="column is-narrow has-text-right"><h6 class="title is-6 mt-5">coming soon</h6></div></div>  <div class="buttons is-centered mt-5"><a class="button is-primary" href="/blog">Back</a></div> <div class="mb-6"></div></div></main> 
+		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class="is-active"><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="content has-text-justified" style="margin: 0 auto;max-width: 880px;"> <div class="columns mb-0"><div class="column has-text-left"><h2 class="title is-2 mb-0">The Trifecta</h2></div> <div class="column is-narrow has-text-right"><h6 class="title is-6 mt-5">18 Jul 2024</h6></div></div> <p data-svelte-h="svelte-1yyqpus">TODO</p> <div class="buttons is-centered mt-5"><a class="button is-primary" href="/research">Back</a></div> <div class="mb-6"></div></div></main> 
 			
 			<script>
 				{
@@ -46,7 +46,7 @@
 						import("../_app/immutable/entry/app.DIY3feRL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 2, 11],
+							node_ids: [0, 4, 16],
 							data,
 							form: null,
 							error: null
