--- a/blog.html
+++ b/blog.html
@@ -16,25 +16,25 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/7.MnuuGMRX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.LDgMhLWO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.l7A6fbuG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.B_1erFai.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5ZI1WtYL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.TjX85taC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Y30OnaFq.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.FsHACeq7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.CFf-lTkw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.yZcz-hCa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.6w4Ej4nR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.rEx3vLA9.js">
+		<link href="./_app/immutable/assets/7.ye64YxFe.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsdUSdX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cc3rAu2H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dno2o2_x.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DvXFW4IV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class="is-active"><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns is-multiline mx-6"><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/medicine.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">An analogy of neural networks and the human body</h4> <div class="content">17 Jan 2024</div></div> <div class="card-footer"><a href="blog/medicine" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/questions.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">Reflecting on beginner questions in machine learning</h4> <div class="content">11 Jan 2024</div></div> <div class="card-footer"><a href="blog/questions" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/tools.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">My take on mechanistic interpretability techniques</h4> <div class="content">coming soon</div></div> <div class="card-footer"><a href="blog/tools" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/alternatives.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">Some thoughts on alternative deep learning paradigms</h4> <div class="content">coming soon</div></div> <div class="card-footer"><a href="blog/alternatives" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div></div></main> 
+		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class="is-active"><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns is-multiline mx-6"><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/medicine.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">An analogy of neural networks and the human body</h4> <div class="content">17 Jan 2024</div></div> <div class="card-footer"><a href="blog/medicine" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div><div class="column is-4"><div class="card svelte-1v6nmoo"><div class="card-image"><figure class="image is-3by2"><img src="blogs/questions.png" alt="Placeholder" style="object-fit: cover;" class="svelte-1v6nmoo"></figure></div> <div class="card-content"><h4 class="title is-4 mb-2">Reflecting on beginner questions in machine learning</h4> <div class="content">11 Jan 2024</div></div> <div class="card-footer"><a href="blog/questions" class="button is-primary is-fullwidth" style="border-top-left-radius: 0 !important;border-top-right-radius: 0 !important">Read</a></div></div> </div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_224da4 = {
+					__sveltekit_y3iv9a = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.LDgMhLWO.js"),
-						import("./_app/immutable/entry/app.5ZI1WtYL.js")
+						import("./_app/immutable/entry/start.BbsdUSdX.js"),
+						import("./_app/immutable/entry/app.DIY3feRL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 7],
