--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.LDgMhLWO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.l7A6fbuG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.B_1erFai.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5ZI1WtYL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.TjX85taC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Y30OnaFq.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.M03iC7qI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.CFf-lTkw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsdUSdX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.CXz9TLH9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dno2o2_x.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns" data-svelte-h="svelte-vnef4j"><div class="column is-3"><div class="box has-text-centered"><figure class="image is-128x128 is-inline-block"><img class="is-rounded" src="profile.jpg" alt="me :)"></figure> <h4 class="subtitle is-4"><b>Thomas Dooms</b></h4>  <h6 class="subtitle is-6">Machine Learning Researcher</h6> <hr> <div class="block"><span class="icon"><i class="fas fa-envelope"></i></span> <span>doomsthomas@gmail.com</span></div> <div class="block"><span class="icon"><i class="fas fa-phone"></i></span> <span>+32478523443</span></div> <div class="block"><span class="icon"><i class="fab fa-linkedin"></i></span> <span><a href="https://www.linkedin.com/in/thomas-dooms-5518a4169/">LinkedIn</a></span></div> <div class="block"><span class="icon"><i class="fab fa-github"></i></span> <span><a href="https://github.com/tdooms">GitHub</a></span></div></div></div> <div class="column"><div class="box"><div class="content"><p>Hi, I&#39;m Thomas! I&#39;m a first year PhD student working on mechanistic interpretability in machine learning.</p> <p>My research focusses on understanding neural networks from their weights. 
+		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns" data-svelte-h="svelte-1asndeb"><div class="column is-3"><div class="box has-text-centered"><figure class="image is-128x128 is-inline-block"><img class="is-rounded" src="profile.jpg" alt="me :)"></figure> <h4 class="subtitle is-4"><b>Thomas Dooms</b></h4>  <h6 class="subtitle is-6">Machine Learning Researcher</h6> <hr> <div class="block"><span class="icon"><i class="fas fa-envelope"></i></span> <span><a href="mailto:doomsthomas@gmail.com">Email</a></span></div> <div class="block"><span class="icon"><i class="fab fa-linkedin"></i></span> <span><a href="https://www.linkedin.com/in/thomas-dooms-5518a4169/">LinkedIn</a></span></div> <div class="block"><span class="icon"><i class="fab fa-github"></i></span> <span><a href="https://github.com/tdooms">GitHub</a></span></div></div></div> <div class="column"><div class="box"><div class="content"><p>Hi, I&#39;m Thomas! I&#39;m a first year PhD student working on mechanistic interpretability in machine learning.</p> <p>My research focusses on understanding neural networks from their weights. 
                     This allows us to make guarantees about their behaviour and failure modes.</p> <p>Machine learning models have become an undeniably useful tool in recent years. 
                     Yet, they remain shrouded in mystery; both in research and everyday use. 
                     Understanding these models will not only help their trustworthiness but guarantee their utility.</p> <p>Outside of work, I love to go on long bike rides, game with friends, go skiing and wear shorts.</p></div></div></div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_224da4 = {
+					__sveltekit_y3iv9a = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -42,8 +42,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.LDgMhLWO.js"),
-						import("./_app/immutable/entry/app.5ZI1WtYL.js")
+						import("./_app/immutable/entry/start.BbsdUSdX.js"),
+						import("./_app/immutable/entry/app.DIY3feRL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
