--- a/blog.html
+++ b/blog.html
@@ -17,15 +17,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/7.ye64YxFe.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsdUSdX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DdqAhAG0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DUWwpGTx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CIgLVODQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cc3rAu2H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dno2o2_x.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.DvXFW4IV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.BSZ1JX-M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_y3iv9a = {
+					__sveltekit_1x4b0sy = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BbsdUSdX.js"),
-						import("./_app/immutable/entry/app.DIY3feRL.js")
+						import("./_app/immutable/entry/start.DdqAhAG0.js"),
+						import("./_app/immutable/entry/app.CIgLVODQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 7],
