--- a/research/bilinear.html
+++ b/research/bilinear.html
@@ -16,10 +16,10 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BbsdUSdX.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DdqAhAG0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DUWwpGTx.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.XaMymNDc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CIgLVODQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ozEcCyBp.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.3ka2Eg8E.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/4.CGWwVMFX.js">
@@ -57,7 +57,7 @@ One could imagine using this to uncover induction behaviour in language models o
 			
 			<script>
 				{
-					__sveltekit_y3iv9a = {
+					__sveltekit_1x4b0sy = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -66,8 +66,8 @@ One could imagine using this to uncover induction behaviour in language models o
 					const data = [null,null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BbsdUSdX.js"),
-						import("../_app/immutable/entry/app.DIY3feRL.js")
+						import("../_app/immutable/entry/start.DdqAhAG0.js"),
+						import("../_app/immutable/entry/app.CIgLVODQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 14],
