--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/17.D7Zchmlw.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsdUSdX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BHR5AZ4f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DdqAhAG0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DUWwpGTx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DIY3feRL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CIgLVODQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.55XwFhI_.js">
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_y3iv9a = {
+					__sveltekit_1x4b0sy = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BbsdUSdX.js"),
-						import("./_app/immutable/entry/app.DIY3feRL.js")
+						import("./_app/immutable/entry/start.DdqAhAG0.js"),
+						import("./_app/immutable/entry/app.CIgLVODQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5, 17],
