--- a/resume.html
+++ b/resume.html
@@ -17,15 +17,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/17.D7Zchmlw.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DdqAhAG0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DUWwpGTx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.XaMymNDc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CIgLVODQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.ozEcCyBp.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.3ka2Eg8E.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.55XwFhI_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dno2o2_x.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/17.BbPjfjGQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOTjlLkP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pnQ-aq7J.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Dre08-OG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DkgqmrYX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.KEXCFnl8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CP36r_sj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.CxfhJui3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dq_HBQv8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/17.DMZo9xwA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1x4b0sy = {
+					__sveltekit_j38joz = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DdqAhAG0.js"),
-						import("./_app/immutable/entry/app.CIgLVODQ.js")
+						import("./_app/immutable/entry/start.DOTjlLkP.js"),
+						import("./_app/immutable/entry/app.DkgqmrYX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5, 17],
