--- a/projects.html
+++ b/projects.html
@@ -16,15 +16,15 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DOTjlLkP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pnQ-aq7J.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Dre08-OG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DkgqmrYX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.KEXCFnl8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CP36r_sj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.8iYm6GDK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.Dq_HBQv8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/12.tf4ZCLYT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.YlY729-z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ca4LRjFr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CufrTsdM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C52-EFNb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CufBhhP2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9LMutF7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.D8HxjDcj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.boXza36d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/12.DXuFGCqf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_j38joz = {
+					__sveltekit_1hieuc5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -42,8 +42,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DOTjlLkP.js"),
-						import("./_app/immutable/entry/app.DkgqmrYX.js")
+						import("./_app/immutable/entry/start.YlY729-z.js"),
+						import("./_app/immutable/entry/app.C52-EFNb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3, 12],
