--- a/research/tokenized.html
+++ b/research/tokenized.html
@@ -16,10 +16,10 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="../_app/immutable/entry/start.YlY729-z.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Ca4LRjFr.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.kJmvXvBj.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Biy3Su3U.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.CufrTsdM.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.C52-EFNb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Cqc6kk2Y.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CufBhhP2.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.B9LMutF7.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/4.DWzG_wwY.js">
@@ -43,7 +43,7 @@ We again show the speedup.</p> <figure data-svelte-h="svelte-1d52r7y"><img src="
 			
 			<script>
 				{
-					__sveltekit_1hieuc5 = {
+					__sveltekit_7njvmk = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -52,8 +52,8 @@ We again show the speedup.</p> <figure data-svelte-h="svelte-1d52r7y"><img src="
 					const data = [null,null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.YlY729-z.js"),
-						import("../_app/immutable/entry/app.C52-EFNb.js")
+						import("../_app/immutable/entry/start.kJmvXvBj.js"),
+						import("../_app/immutable/entry/app.Cqc6kk2Y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 16],
