--- a/blog.html
+++ b/blog.html
@@ -17,15 +17,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/7.ye64YxFe.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YlY729-z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ca4LRjFr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kJmvXvBj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Biy3Su3U.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CufrTsdM.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C52-EFNb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Cqc6kk2Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CufBhhP2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9LMutF7.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BlVakzHT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.boXza36d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.D5mb3ELT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DoHiXkz0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
 	</head>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hieuc5 = {
+					__sveltekit_7njvmk = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YlY729-z.js"),
-						import("./_app/immutable/entry/app.C52-EFNb.js")
+						import("./_app/immutable/entry/start.kJmvXvBj.js"),
+						import("./_app/immutable/entry/app.Cqc6kk2Y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 7],
