--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" crossorigin="anonymous">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 		<link rel="stylesheet" href="./styles.css" />
 
 		<!-- slight hack for blogs -->
@@ -16,38 +16,35 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.kJmvXvBj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Biy3Su3U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CufrTsdM.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cqc6kk2Y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CufBhhP2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9LMutF7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.DXhrhhWr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.boXza36d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOGlR81l.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUrzgI8Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CSLc78ll.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.O75O7_Ig.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/44WAvM-d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnojaKfz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.1UZHYTzL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dbxg-Sev.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns" data-svelte-h="svelte-1wqgpsh"><div class="column is-3"><div class="box has-text-centered"><figure class="image is-128x128 is-inline-block"><img class="is-rounded" src="profile.jpg" alt="me :)"></figure> <h4 class="subtitle is-4"><b>Thomas Dooms</b></h4>  <h6 class="subtitle is-6">Machine Learning Researcher</h6> <hr> <div class="block"><span class="icon"><i class="fas fa-envelope"></i></span> <span><a href="mailto:doomsthomas@gmail.com">Email</a></span></div> <div class="block"><span class="icon"><i class="fab fa-linkedin"></i></span> <span><a href="https://www.linkedin.com/in/thomas-dooms-5518a4169/">LinkedIn</a></span></div> <div class="block"><span class="icon"><i class="fab fa-github"></i></span> <span><a href="https://github.com/tdooms">GitHub</a></span></div></div></div> <div class="column"><div class="box"><div class="content"><p>Hi, I&#39;m Thomas! I&#39;m a first year PhD student working on techniques to interpret deep neural networks from their weights.</p> <p>Analyzing the weights of neural networks can provide general insights into what the model has learnt.
-                    This allows us to faithfully and generally study model behaviour without relying on specific inputs.</p> <p>Machine learning models have become an undeniably useful tool in recent years. 
-                    Yet, they remain shrouded in mystery; both in research and everyday use.
-                    Understanding these models will not only help their trustworthiness but guarantee their utility.</p> <p>Outside of work, I love to go on long bike rides, game with friends, go skiing and wear shorts.</p></div></div></div></div></main> 
+		<div style="display: contents">  <main class="container is-max-desktop"><div class="p-1 mt-5"><div class="columns is-hidden-mobile"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="is-hidden-desktop"><div class="columns is-mobile"><div class="column is-3"><a class="navbar-burger " role="button" aria-label="menu" aria-expanded="false"><span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span></a></div> <div class="column is-6 has-text-centered"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div></div> <div class="navbar-menu "><div class="navbar-end" data-svelte-h="svelte-t9hij4"><a class="navbar-item has-text-centered" href="/blog"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a> <a class="navbar-item has-text-centered" href="/research"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a> <a class="navbar-item has-text-centered" href="/projects"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a> <a class="navbar-item has-text-centered" href="/resume"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></div></div></div> <div class="columns" data-svelte-h="svelte-1f56ozr"><div class="column is-3"><div class="box has-text-centered"><figure class="image is-128x128 is-inline-block"><img class="is-rounded" src="profile.jpg" alt="me :)"></figure> <h4 class="subtitle is-4"><b>Thomas Dooms</b></h4>  <h6 class="subtitle is-6">Interpretability Researcher</h6> <hr> <div class="block"><span class="icon"><i class="fas fa-envelope"></i></span> <span><a href="mailto:doomsthomas@gmail.com">Email</a></span></div> <div class="block"><span class="icon"><i class="fab fa-linkedin"></i></span> <span><a href="https://www.linkedin.com/in/thomas-dooms-5518a4169/">LinkedIn</a></span></div> <div class="block"><span class="icon"><i class="fab fa-github"></i></span> <span><a href="https://github.com/tdooms">GitHub</a></span></div> <div class="block"><span class="icon"><i class="fa-brands fa-google-scholar"></i></span> <span><a href="https://scholar.google.com/citations?user=PPakd2AAAAAJ&amp;hl=en">Scholar</a></span></div></div></div> <div class="column"><div class="box"><div class="content"><p>Hi, I&#39;m Thomas! I&#39;m a second year PhD student working on mechanistic interpretability.</p> <p>My academic interest lies in understanding neural networks from their weights. <br>
+                    I believe this to be the most promising avenue to understanding what a model has learned. <br>
+                    Tensor decompositions on the weights help us understand what is important to the model.</p> <p>I am guided by curiosity, strive for simplicity, and try to be effective.</p> <p>Outside of work, I love to go on long bike rides, game with friends, go skiing and wear shorts.</p></div></div></div></div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_7njvmk = {
+					__sveltekit_1297lxw = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null];
-
 					Promise.all([
-						import("./_app/immutable/entry/start.kJmvXvBj.js"),
-						import("./_app/immutable/entry/app.Cqc6kk2Y.js")
+						import("./_app/immutable/entry/start.DOGlR81l.js"),
+						import("./_app/immutable/entry/app.O75O7_Ig.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
-							data,
+							data: [null,null],
 							form: null,
 							error: null
 						});
