--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" crossorigin="anonymous">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 		<link rel="stylesheet" href="./styles.css" />
 
 		<!-- slight hack for blogs -->
@@ -16,38 +16,37 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.kJmvXvBj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Biy3Su3U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CufrTsdM.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cqc6kk2Y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CufBhhP2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9LMutF7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.D8HxjDcj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/navbar.boXza36d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/12.DXuFGCqf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.D6YF6ztN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js">
+		<link href="./_app/immutable/assets/10.Cqrw1iAg.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOGlR81l.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUrzgI8Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CSLc78ll.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.O75O7_Ig.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/44WAvM-d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BnojaKfz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BNV55dTu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dbxg-Sev.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/10.DNNfDKR9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D6YF6ztN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CgU5AtxT.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class="is-active"><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="columns is-centered"><div class="column is-4"><h5 class="title is-5" data-svelte-h="svelte-1vh2v85">Personal Projects</h5> <a class="box" href="https://github.com/tdooms/pixelguesser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">PixelGuesser</h4> <h6>2022</h6></div></div> <p>PixelGuesser is a party game where players have to guess the contents of a heavily pixelated image which slowly grows more detailed over time. </p></a><a class="box" href="https://github.com/tdooms/paw" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">Paw</h4> <h6>2021</h6></div></div> <p>Easy to use ray marching renderer using JSON for scene description. Many primitives, composables and textures are supported.</p></a><a class="box" href="https://github.com/tdooms/ini-parser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">C++ ini parser</h4> <h6>2019</h6></div></div> <p>A Pythonic ini parser written in c++ using template hacking. The main goals are speed and ease of use. The ini file is read using a performant custom parser.</p></a></div> <div class="column is-4"><h5 class="title is-5" data-svelte-h="svelte-28navq">Academic Projects</h5> <a class="box" href="https://github.com/tdooms/meme.ir" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">meme.ir</h4> <h6>2022</h6></div></div> <p>A group project in which we finetuned a transformer model to predict a meme template given only the text. We achieved 70% top-1 accuracy on 100 templates.</p></a><a class="box" href="https://github.com/GNMX-UA/GNMX" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">GNMX</h4> <h6>2021</h6></div></div> <p>An interdisciplinary group project about computational biology. We developed a simulation and visualisation to investigate the genetic polymorphism phenomenon.</p></a><a class="box" href="https://github.com/tdooms/o4-compiler" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">O4 Compiler</h4> <h6>2020</h6></div></div> <p>A fully fledged C to MIPS compiler using antlr4 and LLVM. There are several optimisation techniques which make the output quite optimised.</p></a></div></div></main> 
+		<div style="display: contents">  <main class="container is-max-desktop"><div class="p-1 mt-5"><div class="columns is-hidden-mobile"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class=""><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class="is-active"><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="is-hidden-desktop"><div class="columns is-mobile"><div class="column is-3"><a class="navbar-burger " role="button" aria-label="menu" aria-expanded="false"><span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span></a></div> <div class="column is-6 has-text-centered"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div></div> <div class="navbar-menu "><div class="navbar-end" data-svelte-h="svelte-t9hij4"><a class="navbar-item has-text-centered" href="/blog"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a> <a class="navbar-item has-text-centered" href="/research"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a> <a class="navbar-item has-text-centered" href="/projects"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a> <a class="navbar-item has-text-centered" href="/resume"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></div></div></div> <div class="columns is-centered"><div class="column is-6"><h5 class="title ml-2 is-5" data-svelte-h="svelte-pabty5">Personal Projects</h5> <a class="box svelte-1nuy9tb" href="https://github.com/tdooms/pixelguesser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">PixelGuesser</h4> <h6>2022</h6></div></div> <p>PixelGuesser is a party game where players have to guess the contents of a heavily pixelated image which slowly grows more detailed over time. </p></a><a class="box svelte-1nuy9tb" href="https://github.com/tdooms/paw" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">Paw</h4> <h6>2021</h6></div></div> <p>Easy to use ray marching renderer using JSON for scene description. Many primitives, composables and textures are supported.</p></a><a class="box svelte-1nuy9tb" href="https://github.com/tdooms/ini-parser" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">C++ ini parser</h4> <h6>2019</h6></div></div> <p>A Pythonic ini parser written in c++ using template hacking. The main goals are speed and ease of use. The ini file is read using a performant custom parser.</p></a></div> <div class="column is-6"><h5 class="title ml-2 is-5" data-svelte-h="svelte-146zxw4">Academic Projects</h5> <a class="box svelte-1nuy9tb" href="https://github.com/tdooms/meme.ir" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">meme.ir</h4> <h6>2022</h6></div></div> <p>A group project in which we finetuned a transformer model to predict a meme template given only the text. We achieved 70% top-1 accuracy on 100 templates.</p></a><a class="box svelte-1nuy9tb" href="https://github.com/GNMX-UA/GNMX" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">GNMX</h4> <h6>2021</h6></div></div> <p>An interdisciplinary group project about computational biology. We developed a simulation and visualisation to investigate the genetic polymorphism phenomenon.</p></a><a class="box svelte-1nuy9tb" href="https://github.com/tdooms/o4-compiler" target="_blank"><div class="media"><div class="media-left" data-svelte-h="svelte-9led48"><span class="icon is-large"><i class="fab fa-2x fa-github"></i></span></div> <div class="media-content"><h4 class="title is-4 mb-0">O4 Compiler</h4> <h6>2020</h6></div></div> <p>A fully fledged C to MIPS compiler using antlr4 and LLVM. There are several optimisation techniques which make the output quite optimised.</p></a></div></div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_7njvmk = {
+					__sveltekit_1297lxw = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null,null];
-
 					Promise.all([
-						import("./_app/immutable/entry/start.kJmvXvBj.js"),
-						import("./_app/immutable/entry/app.Cqc6kk2Y.js")
+						import("./_app/immutable/entry/start.DOGlR81l.js"),
+						import("./_app/immutable/entry/app.O75O7_Ig.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 3, 12],
-							data,
+							node_ids: [0, 3, 10],
+							data: [null,null,null],
 							form: null,
 							error: null
 						});
