--- a/research/trifecta.html
+++ b/research/trifecta.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="../favicon.png" />
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" crossorigin="anonymous">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 		<link rel="stylesheet" href="../styles.css" />
 
 		<!-- slight hack for blogs -->
@@ -16,38 +16,36 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="../_app/immutable/entry/start.kJmvXvBj.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Biy3Su3U.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.CufrTsdM.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Cqc6kk2Y.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.CufBhhP2.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.B9LMutF7.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.DWzG_wwY.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/navbar.boXza36d.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/17.B984_SSs.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/spread.CgU5AtxT.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/blog.BwWZGTwR.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DOGlR81l.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CUrzgI8Z.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CSLc78ll.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.O75O7_Ig.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/44WAvM-d.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.BnojaKfz.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.DfLb0wxa.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Dbxg-Sev.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/15.DLNrvOQ8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CgU5AtxT.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/zyMxKQlh.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="container mt-5"><div class="columns"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class="is-active"><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="content has-text-justified" style="margin: 0 auto;max-width: 880px;"> <div class="columns mb-0"><div class="column has-text-left"><h2 class="title is-2 mb-0">The Trifecta</h2></div> <div class="column is-narrow has-text-right"><h6 class="title is-6 mt-5">18 Jul 2024</h6></div></div> <p data-svelte-h="svelte-1yyqpus">TODO</p> <div class="buttons is-centered mt-5"><a class="button is-primary" href="/research">Back</a></div> <div class="mb-6"></div></div></main> 
+		<div style="display: contents">  <main class="container is-max-desktop"><div class="p-1 mt-5"><div class="columns is-hidden-mobile"><div class="column"><div class="tabs is-boxed is-right"><ul><li class=""><a href="/blog" data-svelte-h="svelte-1pkmwhq"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a></li> <li class="is-active"><a href="/research" data-svelte-h="svelte-axh4gx"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a></li></ul></div></div> <div class="column is-narrow"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div> <div class="column"><div class="tabs is-boxed is-left"><ul><li class=""><a href="/projects" data-svelte-h="svelte-lnjikn"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a></li> <li class=""><a href="/resume" data-svelte-h="svelte-d2d5v"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></li></ul></div></div></div> <div class="is-hidden-desktop"><div class="columns is-mobile"><div class="column is-3"><a class="navbar-burger " role="button" aria-label="menu" aria-expanded="false"><span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span> <span aria-hidden="true"></span></a></div> <div class="column is-6 has-text-centered"><a href="."><b style="font-weight: 800" class="title is-3">tdooms</b></a></div></div> <div class="navbar-menu "><div class="navbar-end" data-svelte-h="svelte-t9hij4"><a class="navbar-item has-text-centered" href="/blog"><span class="icon is-small"><i class="fas fa-fire" aria-hidden="true"></i></span> <span>Blog</span></a> <a class="navbar-item has-text-centered" href="/research"><span class="icon is-small"><i class="fas fa-atom" aria-hidden="true"></i></span> <span>Research</span></a> <a class="navbar-item has-text-centered" href="/projects"><span class="icon is-small"><i class="fas fa-code" aria-hidden="true"></i></span> <span>Projects</span></a> <a class="navbar-item has-text-centered" href="/resume"><span class="icon is-small"><i class="far fa-file-alt" aria-hidden="true"></i></span> <span>Resume</span></a></div></div></div> <div class="content has-text-justified" style="margin: 0 auto;max-width: 880px;"> <div class="columns mb-0"><div class="column has-text-left"><h2 class="title is-2 mb-0">The Trifecta</h2></div> <div class="column is-narrow has-text-right"><h6 class="title is-6 mt-5">18 Jul 2024</h6></div></div> <p data-svelte-h="svelte-1yyqpus">TODO</p> <div class="buttons is-centered mt-5"><a class="button is-primary" href="/research">Back</a></div> <div class="mb-6"></div></div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_7njvmk = {
+					__sveltekit_1297lxw = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null,null];
-
 					Promise.all([
-						import("../_app/immutable/entry/start.kJmvXvBj.js"),
-						import("../_app/immutable/entry/app.Cqc6kk2Y.js")
+						import("../_app/immutable/entry/start.DOGlR81l.js"),
+						import("../_app/immutable/entry/app.O75O7_Ig.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 4, 17],
-							data,
+							node_ids: [0, 4, 15],
+							data: [null,null,null],
 							form: null,
 							error: null
 						});
