--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/13.Cqrw1iAg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B9Dh-7ZW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BJVQ1qEQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BspIWzqS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dL3SLxkk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CRYARyhg.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B4pBCjET.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BHeR6j2n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BwxSQcIe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Qtof4nUz.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.DQNRd8-L.js">
@@ -34,15 +34,15 @@
 			
 			<script>
 				{
-					__sveltekit_bdmg4c = {
+					__sveltekit_utqk51 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B9Dh-7ZW.js"),
-						import("./_app/immutable/entry/app.B4pBCjET.js")
+						import("./_app/immutable/entry/start.BspIWzqS.js"),
+						import("./_app/immutable/entry/app.BHeR6j2n.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4, 13],
