--- a/resume.html
+++ b/resume.html
@@ -16,15 +16,15 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B9Dh-7ZW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BJVQ1qEQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BspIWzqS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dL3SLxkk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CRYARyhg.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B4pBCjET.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BHeR6j2n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BwxSQcIe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Qtof4nUz.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/6.Co7DRdXV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C7kUM-9O.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/19.ClO_hcNr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/21.ClO_hcNr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D6YF6ztN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CgU5AtxT.js">
 	</head>
@@ -33,18 +33,18 @@
 			
 			<script>
 				{
-					__sveltekit_bdmg4c = {
+					__sveltekit_utqk51 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B9Dh-7ZW.js"),
-						import("./_app/immutable/entry/app.B4pBCjET.js")
+						import("./_app/immutable/entry/start.BspIWzqS.js"),
+						import("./_app/immutable/entry/app.BHeR6j2n.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 6, 19],
+							node_ids: [0, 6, 21],
 							data: [null,null,null],
 							form: null,
 							error: null
